# indigo-upgrade-details-v2

./: README.md  cabal-haskell.nix.project  flake.nix  indigo.cabal
indigo-common/Indigo/Common/Contracts/Oracle/: Common.hs
indigo-common/Indigo/Common/Data/: Decimal.hs
indigo-common/Indigo/Common/Utils/: Helpers.hs
indigo-v1/Indigo/V1/Contracts/CDP/: Common.hs
indigo-v1/Indigo/V1/Contracts/Collector/: Common.hs
indigo-v1/Indigo/V1/Contracts/Governance/Execute/: Common.hs
indigo-v1/Indigo/V1/Contracts/Governance/Gov/: Common.hs
indigo-v1/Indigo/V1/Contracts/Governance/Poll/: Common.hs
indigo-v1/Indigo/V1/Contracts/Governance/VersionRegistry/: Common.hs
indigo-v1/Indigo/V1/Contracts/StabilityPool/: Common.hs
indigo-v1/Indigo/V1/Contracts/Staking/: Common.hs
indigo-v1/Indigo/V1/Contracts/Treasury/: Common.hs
indigo-v1/Indigo/V1/Utils/: Spooky.hs
indigo-v2/Indigo/V2/Contracts/CDP/: Common.hs
indigo-v2/Indigo/V2/Contracts/Collector/: Common.hs
indigo-v2/Indigo/V2/Contracts/Governance/Execute/: Common.hs
indigo-v2/Indigo/V2/Contracts/Governance/Gov/: Common.hs
indigo-v2/Indigo/V2/Contracts/Governance/Poll/: Common.hs
indigo-v2/Indigo/V2/Contracts/Governance/VersionRegistry/: Common.hs
indigo-v2/Indigo/V2/Contracts/StabilityPool/: Common.hs
indigo-v2/Indigo/V2/Contracts/Staking/: Common.hs
indigo-v2/Indigo/V2/Contracts/Treasury/: Common.hs
indigo-v2/scripts/: cdp_creator.spend.uplc  collector.named-debruijn  collector.spend.uplc  gov.named-debruijn  iasset_policy.mint.uplc  poll_manager.named-debruijn  poll_shard.spend.uplc  treasury.named-debruijn  treasury.spend.uplc  upgrade_cdpv1_to_cdpv2.mint.uplc  upgrade_cdpv1_to_cdpv2.named-debruijn  upgrade_govv1_to_govv2.mint.uplc  upgrade_govv1_to_govv2.named-debruijn  upgrade_keep_value_void_datum.mint.uplc  upgrade_keep_value_void_datum.named-debruijn  upgrade_stabilitypoolv1_to_stabilitypoolv2.mint.uplc  upgrade_stabilitypoolv1_to_stabilitypoolv2.named-debruijn  upgrade_stakingv1_to_stakingv2.mint.uplc  upgrade_stakingv1_to_stakingv2.named-debruijn
indigo-vX/Indigo/VX/Contracts/CDP/: Common.hs
indigo-vX/Indigo/VX/Contracts/Collector/: Common.hs
indigo-vX/Indigo/VX/Contracts/Governance/Execute/: Common.hs
indigo-vX/Indigo/VX/Contracts/Governance/Gov/: Common.hs
indigo-vX/Indigo/VX/Contracts/Governance/Poll/: Common.hs
indigo-vX/Indigo/VX/Contracts/Governance/VersionRegistry/: Common.hs
indigo-vX/Indigo/VX/Contracts/StabilityPool/: Common.hs
indigo-vX/Indigo/VX/Contracts/Staking/: Common.hs
indigo-vX/Indigo/VX/Contracts/Treasury/: Common.hs
indigo-vX/scripts/: auth_policy.mint.uplc  cdp_creator.spend.uplc  interest_oracle.spend.uplc  poll_shard.spend.uplc  treasury.spend.uplc  version_registry.spend.uplc  version_registry_policy.mint.uplc
tests-common/Tests/Common/: LoadValidatorUtil.hs  THUtils.hs  ValidatorsPath.hs
tests-common/Tests/Common/Contracts/AuthPolicy/: Script.hs
tests-common/Tests/Common/Contracts/IAssetPolicy/: Script.hs
tests-common/data/: always_fail.named-debruijn  always_fail_policy.named-debruijn  auth_token_policy.named-debruijn  iasset_policy.named-debruijn  interest_oracle.named-debruijn  oracle.named-debruijn
tests-v1-lib/Tests/V1/Lib/CDP/: Script.hs
tests-v1-lib/Tests/V1/Lib/Collector/: Script.hs
tests-v1-lib/Tests/V1/Lib/Governance/: Script.hs
tests-v1-lib/Tests/V1/Lib/StabilityPool/: Script.hs
tests-v1-lib/Tests/V1/Lib/Staking/: Script.hs
tests-v1-lib/Tests/V1/Lib/Treasury/: Script.hs
tests-v1-lib/data/: cdp.named-debruijn  cdp_creator.named-debruijn  collector.named-debruijn  execute.named-debruijn  gov.named-debruijn  poll.named-debruijn  poll_manager.named-debruijn  stability_pool.named-debruijn  staking.named-debruijn  treasury.named-debruijn  version_registry.named-debruijn  version_registry_policy.named-debruijn
tests-v1-upgrades-lib/Tests/Upgrades/V1/Lib/CDP/: Script.hs
tests-v1-upgrades-lib/Tests/Upgrades/V1/Lib/Collector/: Script.hs
tests-v1-upgrades-lib/Tests/Upgrades/V1/Lib/Governance/: Script.hs
tests-v1-upgrades-lib/Tests/Upgrades/V1/Lib/StabilityPool/: Script.hs
tests-v1-upgrades-lib/Tests/Upgrades/V1/Lib/Staking/: Script.hs
tests-v1-upgrades-lib/Tests/Upgrades/V1/Lib/Treasury/: Script.hs
tests-v2-lib/Tests/V2/Lib/CDP/: Script.hs
tests-v2-lib/Tests/V2/Lib/Collector/: Script.hs
tests-v2-lib/Tests/V2/Lib/Governance/: Script.hs
tests-v2-lib/Tests/V2/Lib/StabilityPool/: Script.hs
tests-v2-lib/Tests/V2/Lib/Staking/: Script.hs
tests-v2-lib/Tests/V2/Lib/Treasury/: Script.hs
tests-v2-lib/data/: cdp.named-debruijn  cdp_creator.named-debruijn  execute.named-debruijn  poll_shard.named-debruijn  stability_pool.named-debruijn  staking.named-debruijn  version_registry_policy.named-debruijn
tests-vX-lib/Tests/VX/Lib/CDP/: Script.hs
tests-vX-lib/Tests/VX/Lib/Collector/: Script.hs
tests-vX-lib/Tests/VX/Lib/Governance/: Script.hs
tests-vX-lib/Tests/VX/Lib/StabilityPool/: Script.hs
tests-vX-lib/Tests/VX/Lib/Staking/: Script.hs
tests-vX-lib/Tests/VX/Lib/Treasury/: Script.hs
tests-vX-lib/data/: auth_policy.named-debruijn  cdp.named-debruijn  cdp_creator.named-debruijn  execute.named-debruijn  gov.named-debruijn  iasset_policy.named-debruijn  poll_manager.named-debruijn  poll_shard.named-debruijn  stability_pool.named-debruijn  treasury.named-debruijn  upgrade_cdpcreatorv2_to_cdpcreatorv21.named-debruijn  upgrade_cdpv2_to_cdpv21.named-debruijn  upgrade_govv2_to_govv21.named-debruijn  upgrade_stabilitypoolv2_to_stabilitypoolv21.named-debruijn  version_registry.named-debruijn
tests-vX-upgrades-lib/Tests/Upgrades/VX/Lib/CDP/: Script.hs  Types.hs
tests-vX-upgrades-lib/Tests/Upgrades/VX/Lib/Governance/: Script.hs
tests-vX-upgrades-lib/data/: upgrade_treasuryv2_to_treasuryv21.named-debruijn
tests-vX-upgrades-lib/scripts/: upgrade_cdpcreatorv2_to_cdpcreatorv21.mint.uplc  upgrade_cdpv2_to_cdpv21.mint.uplc  upgrade_govv2_to_govv21.mint.uplc  upgrade_stabilitypoolv2_to_stabilitypoolv21.mint.uplc  upgrade_treasuryv2_to_treasuryv21.mint.uplc
upgrade-details/: Main.hs
upgrade-details-v2/: Main.hs
(+2 files in other folders)
